# scenescriber-ai

./: .gitattributes  .gitignore  AGENTS.md  API_KEYS.md  FUTURE_TODOS.md  IMPLEMENTATION_SUMMARY.md  LLAVA_SETUP.md  LM_STUDIO_SETUP.md  Makefile  README.md  app-description.md  quick-start.sh  setup.sh  start.sh  test_installation.py  test_keyframe_logic.py
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt
backend/exports/: .gitkeep
backend/src/: __init__.py  ai_describer.py  cleanup_utils.py  filename_formatter.py  main.py  models.py  scene_detector.py  scene_detector_simple.py  srt_exporter.py
backend/tests/: test_ai_describer.py  test_models.py  test_srt_exporter.py
backend/uploads/: .gitkeep
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/components/: ConfigurationScreen.tsx  ExportScreen.tsx  FilenameFormatBuilder.tsx  ProcessingScreen.tsx  ReviewScreen.tsx  UploadScreen.tsx
frontend/src/store/: useAppStore.ts
frontend/src/utils/: api.ts  time.ts
